--- a/backend/py_neuro/pyproject.toml
+++ b/backend/py_neuro/pyproject.toml
@@ -15,6 +15,7 @@ python-pptx = "^0.6.22"
 python-docx = "^1.1.0"
 pillow = "^10.2.0"
 google-generativeai = "^0.3.2"
+pydantic-settings = "^2.3.4" # Added pydantic-settings
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
